--- a/src/css/ComponentsCss/MobileProjectCards.module.scss
+++ b/src/css/ComponentsCss/MobileProjectCards.module.scss
@@ -2,10 +2,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  // border: 1px solid red;
-  margin: 0 5%;
-  // padding: 8% 5%;
-  // background-color: $surface-200;
   border-radius: 20px;
   border: 1px solid $surface-200;
 }
