--- a/src/css/Introduction.module.scss
+++ b/src/css/Introduction.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   height: 100svh;
+  // min-width: 100%;
   // border: 1px solid green;
   padding: 0 5%;
 }
@@ -112,8 +113,6 @@
   }
 }
 
-@media (min-width: $sm) {
-}
 @media (min-width: $md) {
   .waterContainer {
     display: flex;
