--- a/src/css/Projects.module.scss
+++ b/src/css/Projects.module.scss
@@ -2,12 +2,13 @@
 .container {
   height: 100%;
   // border: 1px solid red;
+  padding: 5% 5%;
   overflow: hidden;
   // margin-bottom: 10%;
 }
 .headerContainer {
   text-align: center;
-  // margin-bottom: 15%;
+  margin-bottom: 5%;
   h1 {
     font-weight: 500;
     span {
@@ -23,7 +24,9 @@
 .projectFullContainer {
   display: none;
   flex-direction: column;
+  padding: 0 10%;
   align-items: center;
+  gap: 3rem;
 }
 
 @media (min-width: $md) {
